--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,12 @@
 {% extends 'header.html' %}
 {% block content %}
+
+{% if alert %}
+<p>{{ alert }}</p><br>
+{% endif %}
+
 <div>
-    <form action="/" method='POST'>
+    <form action="/login" method='POST'>
         <input name="username" type="text" placeholder="Username">
         <input name="password" type="password" placeholder="Password">
         <button type="submit">Login</button>
