--- a/templates/list_expenses.html
+++ b/templates/list_expenses.html
@@ -9,12 +9,16 @@
             {% for key in table['table_keys'] %}
                 <th> {{ table['table_head'][key] }}</th>
             {% endfor %}
+            <th></th>
         </tr>
-        {% for cell in table['table_body'] %}
+        {% for row in table['table_body'] %}
         <tr>
             {% for key in table['table_keys'] %}
-                <td>{{ cell[key] }}</td>
+                <td>{{ row[key] }}</td>
             {% endfor %}
+            <td>
+                <a href="/delete-expense/{{ row['id'] }}"><img src="static/delete.png" width="20"></a>
+            </td>
         </tr>
         {% endfor %}
     </table>
