--- a/templates/account_history.html
+++ b/templates/account_history.html
@@ -4,6 +4,8 @@
     <h2>{{ table['h2'] }}</h2>
 </head>
 <body>
+    <p><a href="/add-income">Add income</a></p>
+    <p><a href="/add-expense">Add expense</a></p>
     <table>
         <tr>
             {% for key in table['table_keys'] %}
