--- a/templates/list_incomes.html
+++ b/templates/list_incomes.html
@@ -4,6 +4,7 @@
     <h2>{{ table['h2'] }}</h2>
 </head>
 <body>
+    <a href="/add-income"><img src="static/add.png" width="20"></a>
     <table>
         <tr>
             {% for key in table['table_keys'] %}
