--- a/templates/add_income.html
+++ b/templates/add_income.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html>
-<head>
-    <h1>Add income</h1>
-</head>
-<body>
+{% extends 'header.html' %}
+
+{% block content %}
+<h1>Add income</h1>
     <form action="/add-income" method="post">
         <input type="hidden" name="id" value="">
         <p><label for="name">Income's name:</label><br>
@@ -21,5 +19,4 @@
         <input type="text" name="comment" id="comment" value=""></p>
         <p><input type="submit" value="Add income"></p>
     </form>
-</body>
-</html>
+{% endblock %}
