--- a/templates/list_expenses.html
+++ b/templates/list_expenses.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html>
-<head>
+{% extends 'header.html' %}
+
+{% block content %}
     <h2>{{ table['h2'] }}</h2>
-</head>
-<body>
     <a href="/add-expense"><img src="static/add.png" width="20"></a>
     <table>
         <tr>
@@ -23,5 +21,4 @@
         </tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
