--- a/templates/list_expenses.html
+++ b/templates/list_expenses.html
@@ -18,6 +18,7 @@
                 <td>{{ row[key] }}</td>
             {% endfor %}
             <td>
+                <a href="/edit_expense/{{ row['id'] }}"><img src="static/edit.png" width="20"></a>
                 <a href="/delete-expense/{{ row['id'] }}"><img src="static/delete.png" width="20"></a>
             </td>
         </tr>
