--- a/templates/list_incomes.html
+++ b/templates/list_incomes.html
@@ -18,6 +18,7 @@
                 <td>{{ row[key] }}</td>
             {% endfor %}
             <td>
+                <a href="/edit_income/{{ row['id'] }}"><img src="static/edit.png" width="20"></a>
                 <a href="/delete-income/{{ row['id'] }}"><img src="static/delete.png" width="20"></a>
             </td>
         </tr>
