--- a/templates/add_income.html
+++ b/templates/add_income.html
@@ -1,22 +1,31 @@
 {% extends 'header.html' %}
-
 {% block content %}
-<h1>Add income</h1>
-    <form action="/add-income" method="post">
-        <input type="hidden" name="id" value="">
-        <p><label for="name">Income's name:</label><br>
-        <input type="text" name="name" id="name" value=""></p>
-        <select name="inc_category_id">
-                {% for option in options %}
-                    <option value = {{ option.id }}>{{ option.name }}</option>
-                {% endfor %}
-        </select>
-        <p><label for="price">Price:</label><br>
-            <input type="integer" name="price" id="price" value=""></p>
-        <input type="hidden" name="submission_time" value="">
-        <input type="hidden" name="user_id" value="">
-        <p><label for="comment">Comment:</label><br>
-        <input type="text" name="comment" id="comment" value=""></p>
-        <p><input type="submit" value="Add income"></p>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+        <h1>Add income</h1>
+        <form action="/add-income" method="post">
+            <input type="hidden" name="id" value="">
+            <p><label for="name">Income's name:</label><br>
+            <input type="text" name="name" id="name" value=""></p>
+            <select name="inc_category_id">
+                    {% for option in options %}
+                        <option value = {{ option.id }}>{{ option.name }}</option>
+                    {% endfor %}
+            </select>
+            <p><label for="price">Price:</label><br>
+                <input type="integer" name="price" id="price" value=""></p>
+            <input type="hidden" name="submission_time" value="">
+            <input type="hidden" name="user_id" value="">
+            <p><label for="comment">Comment:</label><br>
+            <input type="text" name="comment" id="comment" value=""></p>
+            <p><input type="submit" value="Add income"></p>
+        </form>
+    </div>
+    <div class="col-sm">
+    </div>
+  </div>
+</div>
 {% endblock %}
