--- a/templates/header.html
+++ b/templates/header.html
@@ -1,56 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Piggy Bank</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<meta charset="UTF-8">
+<title>Piggy Bank</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+<nav class="navbar-light navbar-toggleable-md bg-light">
+    <div class="row">
+        <div class="col-sm-2">
+            <img src="static/piggy.jpg" alt="Logo">
+        </div>
+        {% if 'username' in session %}
+            <div class="col-sm">
+                <a class="navbar-brand" href="/add-income">Add income</a>
+                <a class="navbar-brand" href="/add-expense">Add expense</a>
+                <a class="navbar-brand" href="/expenses">All expenses</a>
+                <a class="navbar-brand" href="/incomes">All incomes</a>
+                <a class="navbar-brand" href="/account_history">Account history</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-          {% if 'username' not in session %}
-            <form action="/login" method='POST' class="form-inline my-2 my-lg-0">
-              <input name="username" type="text" class="form-control mr-sm-2" aria-label="Username">
-              <input name="password" type="password" class="form-control mr-sm-2" aria-label="Password">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-              <a href="{{ url_for('registration') }}">Registration</a>
-            </form>
-          {% else %}
-            <form action="/logout" class="form-inline my-2 my-lg-0">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
-            </form>
-          {% endif %}
-      </div>
-    <div>
-</div>
-    </nav>
-    {% block content %} {% endblock %}
+        {% endif %}
+        {% if 'username' not in session %}
+            <div class="col-sm float-right" >
+                <form action="/login" method='POST' class="form-inline my-2 my-lg-0 float-right">
+                    <input name="username" type="text" class="form-control mr-sm-2 float-right" aria-label="Username">
+                    <input name="password" type="password" class="form-control mr-sm-2 float-right" aria-label="Password">
+                    <button class="btn btn-outline-success my-2 my-sm-0 float-right" type="submit">Login</button>
+                </form>
+            </div>
+        {% else %}
+            <div class="col-sm-2 float-right">
+                <form action="/logout" class="form-inline my-2 my-lg-0 float-right">
+                    <div>{{ session.username }}</div>
+                    <button class="btn btn-outline-success my-2 my-sm-0 float-right" type="submit">Logout</button>
+                </form>
+            </div>
+        {% endif %}
+    </div>
+</nav>
+{% block content %}
+{% endblock %}
 </body>
 </html>
