--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,23 +1,30 @@
 {% extends 'header.html' %}
 {% block content %}
-
-{% if alert %}
-<p>{{ alert }}</p><br>
-{% endif %}
-<h1>Registration</h1>
-<div>
-    <form method="post" action="/registration">
-        <input name="name" type="text" placeholder="Name" required><br>
-        <p></p>
-        <input name="username" type="text" placeholder="Username" required><br>
-        <p></p>
-        <input name="password" type="text" placeholder="Password" required><br>
-        <p></p>
-        <input name="verify_password" type="text" placeholder="Repeat Password" required><br>
-        <p></p>
-        <input name="email" type="text" placeholder="E-mail" required><br>
-        <p></p>
-        <button type="submit" >Submit</button>
-    </form>
+<div class="container">
+    <div class="row">
+        <div class="col-sm"></div>
+            <div class="col-sm">
+            <h1>Registration</h1>
+            <div>
+                <form method="post" action="/registration">
+                <input name="name" type="text" placeholder="Name" required><br>
+                <p></p>
+                <input name="username" type="text" placeholder="Username" required><br>
+                <p></p>
+                <input name="password" type="text" placeholder="Password" required><br>
+                <p></p>
+                <input name="verify_password" type="text" placeholder="Repeat Password" required><br>
+                <p></p>
+                <input name="email" type="text" placeholder="E-mail" required><br>
+                <p></p>
+                <button type="submit" >Submit</button>
+                </form>
+                {% if alert %}
+                   <p>{{ alert }}</p><br>
+                {% endif %}
+            </div>
+        </div>
+    <div class="col-sm"></div>
+</div>
 </div>
 {% endblock %}
