--- a/templates/header.html
+++ b/templates/header.html
@@ -29,11 +29,16 @@
                 </form>
             </div>
         {% else %}
-            <div class="col-sm-2 float-right">
+            <div class="col-sm-3 float-right">
+                <div class="col-sm-1 float-right">
                 <form action="/logout" class="form-inline my-2 my-lg-0 float-right">
-                    <div>{{ session.username }}</div>
                     <button class="btn btn-outline-success my-2 my-sm-0 float-right" type="submit">Logout</button>
                 </form>
+                </div>
+                <div class="col-sm-2 float-center">
+                    <div>{{ session.username }}</div>
+                    <div>{{ balance }}</div>
+                </div>
             </div>
         {% endif %}
     </div>
