Balance counter works.

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -11,9 +11,9 @@
                 <p></p>
                 <input name="username" type="text" placeholder="Username" required><br>
                 <p></p>
-                <input name="password" type="text" placeholder="Password" required><br>
+                <input name="password" type="password" placeholder="Password" required><br>
                 <p></p>
-                <input name="verify_password" type="text" placeholder="Repeat Password" required><br>
+                <input name="verify_password" type="password" placeholder="Repeat Password" required><br>
                 <p></p>
                 <input name="email" type="text" placeholder="E-mail" required><br>
                 <p></p>
